@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Oct 2010; Nikoli <nikoli@lavabit.com>
+  +psi-historykeeper-0.0.5_pre3076.ebuild:
+  version bump
+
   07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
   create ChangeLog
 
